--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "CI= sreact-scripts build",
+    "local-build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
